# data-morph

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  index.html  pyproject.toml  setup.cfg
.github/: codecov.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-pr.yml  ci.yml  citation-validate.yml  codecov-validate.yml  docs.yml  generate-morphs.yaml  generate-morphs.yml  greetings.yml  label.yml  linting.yml  pre-commit-autoupdate.yml  pypi-publish.yml
0.1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  quickstart.html  release_notes.html  search.html  searchindex.js
0.1.0/: .buildinfo  index.html  py-modindex.html  quickstart.html  search.html
0.1.0/_static/: switcher.json
0.1.0/api/: data_morph.bounds.bounding_box.html  data_morph.bounds.html  data_morph.bounds.interval.Interval.html  data_morph.bounds.interval.html  data_morph.data.dataset.html  data_morph.data.html  data_morph.data.loader.html  data_morph.data.stats.SummaryStatistics.html  data_morph.data.stats.get_values.html  data_morph.data.stats.html  data_morph.plotting.style.html  data_morph.plotting.style.plot_with_custom_style.html  data_morph.shapes.bases.line_collection.LineCollection.html  data_morph.shapes.bases.line_collection.html  data_morph.shapes.bases.shape.Shape.html  data_morph.shapes.bases.shape.html  data_morph.shapes.circles.Bullseye.html  data_morph.shapes.factory.ShapeFactory.html  data_morph.shapes.html  data_morph.shapes.lines.HighLines.html  data_morph.shapes.lines.HorizontalLines.html  data_morph.shapes.lines.VerticalLines.html  data_morph.shapes.lines.WideLines.html  data_morph.shapes.lines.html  data_morph.shapes.points.Scatter.html  data_morph.shapes.points.UpParabola.html  data_morph.shapes.points.html  data_morph.shapes.polygons.Rectangle.html  data_morph.shapes.polygons.Star.html  data_morph.shapes.polygons.html
0.1/.doctrees/: api.doctree  index.doctree
0.1/_modules/: index.html
0.1/_sources/: api.rst.txt
0.1/_static/: switcher.json
0.1/api/: data_morph.bounds.bounding_box.BoundingBox.html  data_morph.bounds.bounding_box.html  data_morph.bounds.html  data_morph.bounds.interval.Interval.html  data_morph.bounds.interval.html  data_morph.data.dataset.Dataset.html  data_morph.data.dataset.html  data_morph.data.html  data_morph.data.loader.DataLoader.html  data_morph.data.loader.html  data_morph.data.stats.SummaryStatistics.html  data_morph.data.stats.get_values.html  data_morph.data.stats.html  data_morph.morpher.DataMorpher.html  data_morph.morpher.html  data_morph.plotting.animation.html  data_morph.plotting.animation.stitch_gif_animation.html  data_morph.plotting.html  data_morph.plotting.static.html  data_morph.plotting.static.plot.html  data_morph.plotting.style.html  data_morph.plotting.style.plot_with_custom_style.html  data_morph.shapes.bases.html  data_morph.shapes.bases.line_collection.LineCollection.html  data_morph.shapes.bases.line_collection.html  data_morph.shapes.bases.point_collection.PointCollection.html  data_morph.shapes.bases.point_collection.html  data_morph.shapes.bases.shape.Shape.html  data_morph.shapes.bases.shape.html  data_morph.shapes.circles.Bullseye.html  data_morph.shapes.circles.Circle.html  data_morph.shapes.circles.html  data_morph.shapes.factory.ShapeFactory.html  data_morph.shapes.factory.html  data_morph.shapes.html  data_morph.shapes.lines.HighLines.html  data_morph.shapes.lines.HorizontalLines.html  data_morph.shapes.lines.SlantDownLines.html  data_morph.shapes.lines.SlantUpLines.html  data_morph.shapes.lines.VerticalLines.html  (+11 more)
0.1/doctrees/: quickstart.doctree
0.2/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  quickstart.html  release_notes.html  search.html  searchindex.js
0.2/_modules/: index.html
0.2/_sources/: cli.rst.txt  release_notes.rst.txt
0.2/_static/: documentation_options.js
0.2/api/: data_morph.bounds.bounding_box.BoundingBox.html  data_morph.bounds.bounding_box.html  data_morph.bounds.html  data_morph.bounds.interval.Interval.html  data_morph.bounds.interval.html  data_morph.data.dataset.Dataset.html  data_morph.data.dataset.html  data_morph.data.html  data_morph.data.loader.DataLoader.html  data_morph.data.loader.html  data_morph.data.stats.SummaryStatistics.html  data_morph.data.stats.get_values.html  data_morph.data.stats.html  data_morph.morpher.DataMorpher.html  data_morph.morpher.html  data_morph.plotting.animation.html  data_morph.plotting.animation.stitch_gif_animation.html  data_morph.plotting.html  data_morph.plotting.static.html  data_morph.plotting.static.plot.html  data_morph.plotting.style.html  (+33 more)
0.3/: .buildinfo  api.html  citation.html  classroom-ideas.html  cli.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  release-notes.html  search.html  searchindex.js
data_morph/: __init__.py  __main__.py  data_morph.py
dev/: .buildinfo  CNAME  api.html  citation.html  classroom-ideas.html  cli.html  custom_datasets.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  release-notes.html  release_notes.html  search.html  searchindex.js  shape_creation.html
docs/: Makefile  README.md  api.rst  citation.rst  classroom-ideas.rst  cli.rst  conf.py  custom_datasets.rst  index.rst  post_build.py  quickstart.rst  release-notes.rst  release_notes.rst  shape_creation.rst
generated_datasets/: BoxPlots.tsv  TwelveFromSlant-Alternate-wide.tsv  TwelveFromSlant-wide.tsv
main/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  release_notes.html  search.html
samestats/: __main__.py  samestats.py
stable/: .buildinfo  api.html  citation.html  cli.html  custom_datasets.html  genindex.html  index.html  py-modindex.html  release_notes.html  search.html
tests/: __init__.py  conftest.py  test_bounds.py  test_cli.py  test_data.py  test_main.py  test_morpher.py  test_plotting.py  test_shapes.py
(+1217 files in other folders)
