[metadata]
name = samestats
version = file: samestats/version.txt
description = Generate data sets wit varied appearance and identical statistics through simulated annealing
long_description = file: README.md
keywords =
    statistics
    stats
    matplotlib
    pandas
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = True
include_package_data = True
packages = find:
scripts = samestats.py
install_requires =
    pandas
    seaborn
    matplotlib
    numpy
    scipy
    pytweening
    tqdm
    docopt

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    samestats=samestats.__main__:main
